--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "postinstall": "prisma generate"
+        "postinstall": "prisma generate",
+        "deploy": "vercel deploy --prod"
     },
     "dependencies": {
         "next": "14.2.0",
